fix z-index for mobile version

--- a/style.css
+++ b/style.css
@@ -463,6 +463,7 @@ nav .social-media ul li:hover a{
 
 #my-work{
     display: flex;
+    z-index: 10;
 }
 
 
@@ -1295,10 +1296,6 @@ nav .fas{
     
     .skillcard img{
         padding-right: 0;
-    }
-
-    #my-work{
-        z-index: 10;
     }
 
     .website, .game, .program{
